2004-02-29  Ben Maurer <bmaurer@users.sourceforge.net>

	* class.cs (Method.CheckBase): Avoid using FindMembers, we have
	direct access to our parent, so check the method inline there.

2004-02-27 Ben Maurer  <bmaurer@users.sourceforge.net>

	* expression.cs (Invocation.EmitCall): Miguel's last commit
	caused a regression. If you had:
	
	    T t = null;
	    t.Foo ();

	In Foo the implict this would be null.
	
2004-02-27  Miguel de Icaza  <miguel@ximian.com>

	* expression.cs (Invocation.EmitCall): If the method is not
	virtual, do not emit a CallVirt to it, use Call.

	* typemanager.cs (GetFullNameSignature): Improve the method to
	cope with ".ctor" and replace it with the type name.

	* class.cs (ConstructorInitializer.Resolve): Now the method takes
	as an argument the ConstructorBuilder where it is being defined,
	to catch the recursive constructor invocations.

2004-02-26  Miguel de Icaza  <miguel@ximian.com>

	* iterators.cs (IteratorHandler.IsIEnumerator, IsIEnumerable): New
	routines to check if a type is an enumerable/enumerator allow
	classes that implement the IEnumerable or IEnumerator interfaces.

	* class.cs (Property, Operator): Implement IIteratorContainer, and
	implement SetYields.

	(Property.Define): Do the block swapping for get_methods in the
	context of iterators.   We need to check if Properties also
	include indexers or not.

	(Operator): Assign the Block before invoking the
	OperatorMethod.Define, so we can trigger the Iterator code
	replacement. 

	* cs-parser.jay (SimpleIteratorContainer): new helper class.  Both
	Property and Operator classes are not created when we parse the
	declarator but until we have the block completed, so we use a
	singleton SimpleIteratorContainer.Simple to flag whether the
	SetYields has been invoked.

	We propagate this setting then to the Property or the Operator to
	allow the `yield' to function.

2004-02-25  Marek Safar  <marek.safar@seznam.cz>

	* codegen.cs: Implemented attribute support for modules.