@@ -1171,7 +1171,7 @@ namespace Mono.CSharp
 				//
 				return true;
 			}
-			
+
 			try {
 				int pos;
 
@@ -1183,6 +1183,8 @@ namespace Mono.CSharp
 					
 					string name = arg.Substring (pos). Trim (quotes);
 					ref_name = Location.LookupFile (name);
+					file_name.HasLineDirective = true;
+					ref_name.HasLineDirective = true;
 					Location.Push (ref_name);
 				} else {
 					ref_line = System.Int32.Parse (arg);
